# app/src/test/resources/api-spec.yaml
@@ -6,61 +6,6 @@ servers:
 - url: ""
   description: Generated server url
 paths:
-  /api/workspaces/{workspaceId}/invoices/{invoiceId}:
-    get:
-      tags:
-      - invoices-api
-      operationId: getInvoice
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: invoiceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/InvoiceDto"
-    put:
-      tags:
-      - invoices-api
-      operationId: updateInvoice
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: invoiceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/EditInvoiceDto"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/InvoiceDto"
   /api/workspaces/{workspaceId}/incomes/{incomeId}:
     get:
       tags:
@@ -165,119 +110,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UsersApiUpdateUserErrors"
-  /api/workspaces/{workspaceId}/invoices:
-    get:
-      tags:
-      - invoices-api
-      operationId: getInvoices
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: sortBy
-        in: query
-        required: false
-        schema:
-          type: string
-          enum:
-          - _NOT_SUPPORTED
-      - name: "freeSearchText[eq]"
-        in: query
-        required: false
-        schema:
-          type: string
-      - name: "status[in]"
-        in: query
-        required: false
-        schema:
-          type: array
-          items:
-            type: string
-            enum:
-            - DRAFT
-            - SENT
-            - OVERDUE
-            - PAID
-            - CANCELLED
-      - name: pageNumber
-        in: query
-        required: false
-        schema:
-          type: integer
-          format: int32
-      - name: pageSize
-        in: query
-        required: false
-        schema:
-          type: integer
-          format: int32
-      - name: sortOrder
-        in: query
-        required: false
-        schema:
-          type: string
-          enum:
-          - asc
-          - desc
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiPageInvoiceDto"
-    post:
-      tags:
-      - invoices-api
-      operationId: createInvoice
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/EditInvoiceDto"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/InvoiceDto"
-  /api/workspaces/{workspaceId}/invoices/{invoiceId}/cancel:
-    post:
-      tags:
-      - invoices-api
-      operationId: cancelInvoice
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: invoiceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/InvoiceDto"
   /api/workspaces/{workspaceId}/incomes:
     get:
       tags:
@@ -686,119 +518,6 @@ paths:
                   $ref: "#/components/schemas/DataBuffer"
 components:
   schemas:
-    EditInvoiceDto:
-      type: object
-      properties:
-        title:
-          type: string
-          minLength: 1
-        customer:
-          type: integer
-          format: int64
-        dateIssued:
-          type: string
-          format: date
-        dateSent:
-          type: string
-          format: date
-        datePaid:
-          type: string
-          format: date
-        dateCancelled:
-          type: string
-          format: date
-        dueDate:
-          type: string
-          format: date
-        currency:
-          type: string
-          minLength: 1
-        amount:
-          type: integer
-          format: int64
-        attachments:
-          type: array
-          items:
-            type: integer
-            format: int64
-        notes:
-          type: string
-          maxLength: 1024
-          minLength: 0
-        generalTax:
-          type: integer
-          format: int64
-      required:
-      - amount
-      - currency
-      - customer
-      - dateIssued
-      - dueDate
-      - title
-    InvoiceDto:
-      type: object
-      properties:
-        title:
-          type: string
-        customer:
-          type: integer
-          format: int64
-        createdAt:
-          type: string
-          format: date-time
-        dateIssued:
-          type: string
-          format: date
-        dateSent:
-          type: string
-          format: date
-        datePaid:
-          type: string
-          format: date
-        dueDate:
-          type: string
-          format: date
-        currency:
-          type: string
-        amount:
-          type: integer
-          format: int64
-        attachments:
-          type: array
-          items:
-            type: integer
-            format: int64
-        notes:
-          type: string
-        id:
-          type: integer
-          format: int64
-        version:
-          type: integer
-          format: int32
-        status:
-          type: string
-          enum:
-          - DRAFT
-          - SENT
-          - OVERDUE
-          - PAID
-          - CANCELLED
-        generalTax:
-          type: integer
-          format: int64
-      required:
-      - amount
-      - attachments
-      - createdAt
-      - currency
-      - customer
-      - dateIssued
-      - dueDate
-      - id
-      - status
-      - title
-      - version
     EditIncomeDto:
       type: object
       properties:
@@ -1021,27 +740,6 @@ components:
           minLength: 0
       required:
       - password
-    ApiPageInvoiceDto:
-      type: object
-      properties:
-        pageNumber:
-          type: integer
-          format: int32
-        pageSize:
-          type: integer
-          format: int32
-        totalElements:
-          type: integer
-          format: int64
-        data:
-          type: array
-          items:
-            $ref: "#/components/schemas/InvoiceDto"
-      required:
-      - data
-      - pageNumber
-      - pageSize
-      - totalElements
     ApiPageIncomeDto:
       type: object
       properties:
